--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
       "page/OBS/services/idcard/idcard",
       "page/OBS/services/stock/stock",
       "page/OBS/services/ip/ip",
+      "page/OBS/services/weather/weather",
 
       "page/component/index",
       "page/component/navigation-pages/controller/controller",
