完善服务的接口
1.完善天气的调用接口
2.新增城市列表的精确查找
3.新增城市列表的模糊查找条件

--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
       "page/OBS/services/stock/stock",
       "page/OBS/services/ip/ip",
       "page/OBS/services/weather/weather",
+      "page/OBS/services/city/city",
 
       "page/component/index",
       "page/component/navigation-pages/controller/controller",
