完善服务接口
1.完善城市接口，判断精确查找城市和模糊查找城市
2.增加今日油价查询服务
3.增加图片机器人服务

--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
       "page/OBS/services/ip/ip",
       "page/OBS/services/weather/weather",
       "page/OBS/services/city/city",
+      "page/OBS/services/oil/oil",
 
       "page/component/index",
       "page/component/navigation-pages/controller/controller",
