--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
       "page/OBS/services/weather/weather",
       "page/OBS/services/city/city",
       "page/OBS/services/oil/oil",
+      "page/OBS/services/holiday/holiday",
 
       "page/component/index",
       "page/component/navigation-pages/controller/controller",
